# coodie

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.mjs  pyproject.toml  renovate.json  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.toml
.github/hooks/: setup-shims.bats  setup-shims.sh
.github/instructions/: modern-python.instructions.md
.github/scripts/: build-delegation-prompt.sh  build-squash-message.sh  collect-failed-logs.sh  extract-plan-ref.sh  extract_log_snippet.py  find-error-line.py  format_snippets.py  generate-squash-body.py  inspect_pr_checks.py  parse-command.sh  parse-plan.py  resolve-conflict-file.py  resolve-conflicts.sh  summarize-failure.py  test_parse_plan.py
.github/skill-templates/: dependabot.yml  pre-commit-config.yaml
.github/skills/: acsylla-integration-tests.md  integration-tests.md  setup-environment.md  test-refactoring.md  writing-plans.md
.github/workflows/: auto-approve-bot-runs.yml  benchmark.yml  ci.yml  claude-code-review.yml  copilot-ci-proxy.yml  docs.yml  labels.yml  plan-continuation.yml  pr-conflict-detect.yml  pr-rebase-squash.yml  pr-solve-command.yml  publish.yml  self-healing-ci.yml  test-demos.yml  test-integration.yml  test-unit.yml
benchmarks/: README.md  bench_argus.py  bench_batch.py  bench_collections.py  bench_delete.py  bench_insert.py  bench_raw_dc.py  bench_read.py  bench_schema.py  bench_serialization.py  bench_udt.py  bench_update.py  bench_vector.py  conftest.py  models_argus_coodie.py  models_argus_cqlengine.py  models_coodie.py  models_cqlengine.py  models_raw_dc.py
benchmarks/acsylla/: data.js
benchmarks/scylla/: data.js
demo/: README.md  main.py  models.py  pyproject.toml
demo/templates/: base.html  index.html
demo/templates/partials/: review_list.html
demos/: README.md  docker-compose.yml
demos/batch-importer/: Makefile  README.md  models.py  pyproject.toml  sample_manifest.csv  seed.py  smoke_test.py
demos/collections-tags/: Makefile  README.md  main.py  models.py  pyproject.toml  seed.py
demos/collections-tags/templates/: base.html  index.html
demos/collections-tags/templates/partials/: article_detail.html  article_list.html  tag_cloud.html
demos/django-taskboard/: .gitignore  Makefile  README.md  cassandra_models.py  manage.py  pyproject.toml  seed.py
demos/django-taskboard/taskboard/: settings.py  urls.py  wsgi.py
demos/django-taskboard/tasks/: apps.py  urls.py  views.py
demos/django-taskboard/tasks/management/commands/: sync_cassandra.py
demos/django-taskboard/tasks/templates/tasks/: board.html
demos/fastapi-catalog/: Makefile  README.md  main.py  pyproject.toml  seed.py
demos/flask-blog/: Makefile  README.md  app.py  models.py  pyproject.toml  seed.py
demos/flask-blog/templates/: base.html  index.html  new_post.html  post_detail.html
demos/lwt-user-registry/: Makefile  README.md  main.py  models.py  pyproject.toml  seed.py
demos/materialized-views/: Makefile  README.md  main.py  models.py  pyproject.toml  seed.py
demos/materialized-views/templates/: base.html  index.html
demos/materialized-views/templates/partials/: product_list.html  view_results.html
demos/polymorphic-cms/: main.py  seed.py
demos/realtime-counters/: Makefile  README.md  main.py  models.py  pyproject.toml  seed.py
demos/realtime-counters/templates/: index.html
demos/realtime-counters/templates/partials/: counter_list.html  sim_status.html
demos/schema-migrations/: Makefile  README.md  demo.sh  main.py  models.py  pyproject.toml  seed.py
demos/schema-migrations/migrations/: 20260115_001_create_base_tables.py  20260203_002_add_featured_column.py  20260220_003_set_reviews_ttl.py  20260310_004_add_search_index.py  20260325_005_rename_brand_to_manufacturer.py  20260410_006_add_hazard_class.py
demos/timeseries-iot/: Makefile  README.md  main.py  models.py  pyproject.toml  seed.py  smoke_test.py
demos/ttl-sessions/: Makefile  README.md  main.py  models.py  pyproject.toml  seed.py  smoke_test.py
demos/ttl-sessions/templates/: base.html  index.html
demos/ttl-sessions/templates/partials/: session_list.html
demos/vector-search/: Makefile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  seed.py
demos/vector-search/templates/: index.html
demos/vector-search/templates/partials/: browse.html  results.html
docs/: integration-test-coverage.md
docs/plans/: UNIMPLEMENTED.md  client-encryption.md  cql-gap-analysis.md  cqlengine-feature-parity.md  cqlengine-missing-features.md  cqlengine-test-coverage-plan.md  demos-extension-plan.md  documentation-plan.md  github-actions-testing-plan.md  integration-test-coverage.md  migration-strategy.md  performance-improvement.md  plan-phase-continuation-action.md  pr-comment-rebase-squash-action.md  pr-conflict-detection-solve.md  python-rs-driver-support.md  python-rs-feature-gaps.md  raw-dc-benchmark-plan.md  rewrite-coodie-plan.md  silent-exception-pass.md  sync-api-support.md  test-refactoring-plan.md  udt-support.md
docs/source/: conf.py  index.md  installation.md  llms-full.txt  llms.txt  quickstart.md  usage.md
src/coodie/: __init__.py  batch.py  cassanandra_model.py  cql_builder.py  exceptions.py  fields.py  lazy.py  results.py  schema.py  types.py  usertype.py
tests/: conftest.py  conftest_scylla.py  models.py  test_api_parity.py  test_batch.py  test_cassandra_model.py  test_cql_builder.py  test_document.py  test_drivers.py  test_integration.py  test_keyspace.py  test_lazy.py  test_main.py  test_migrations.py  test_migrations_autogen.py  test_migrations_cli.py  test_migrations_data.py  test_polymorphic.py  test_python_rs_driver.py  test_query.py  test_schema.py  test_types.py  test_usertype.py  test_vector.py  test_workflow_conventions.py
tests/aio/: test_document.py  test_keyspace.py  test_polymorphic.py  test_query.py
tests/integration/: conftest.py  test_advanced_query.py  test_basic.py  test_batch_integration.py  test_counter.py  test_custom_index.py  test_encryption.py  test_extended.py  (+12 more)
(+133 files in other folders)
