[project]
name = "coodie"
version = "0.0.1"
description = "coodie = cassandra+beanie(hoodie)"
authors = [
    { name = "Israel Fruchter", email = "fruch@scylladb.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "scylla-driver>=3.25.4",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=5.0,<6",
    "sphinx-rtd-theme>=1.0,<2",
    "myst-parser>=0.18,<1",
]

[project.urls]
Homepage = "https://github.com/fruch/coodie"
Documentation = "https://coodie.readthedocs.io"
Repository = "https://github.com/fruch/coodie"
"Bug Tracker" = "https://github.com/fruch/coodie/issues"
Changelog = "https://github.com/fruch/coodie/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "testcontainers>=4.0",
    "pre-commit>=4.5.1,<5",
]

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
version_variable = "src/coodie/__init__.py:__version__"
build_command = "uv build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=coodie --cov-report=term-missing:skip-covered -m 'not integration'"
asyncio_mode = "auto"
markers = ["integration: marks tests as integration tests (deselect with '-m not integration')"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true
