[project]
name = "coodie"
dynamic = ["version"]
description = "coodie = cassandra+beanie(hoodie)"
authors = [
    { name = "Israel Fruchter", email = "fruch@scylladb.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
scylla = [
    "scylla-driver>=3.25.4",
]
cassandra = [
    "cassandra-driver>=3.25.0",
]
acsylla = [
    "acsylla>=0.1.0",
]

[project.scripts]
coodie = "coodie.migrations.cli:main"

[project.urls]
Homepage = "https://github.com/fruch/coodie"
Documentation = "https://fruch.github.io/coodie/"
Repository = "https://github.com/fruch/coodie"
"Bug Tracker" = "https://github.com/fruch/coodie/issues"
Changelog = "https://github.com/fruch/coodie/blob/main/CHANGELOG.md"

# NOTE: We'd prefer to use uv_build here, but it doesn't yet support dynamic
# versioning from VCS. Switch back once uv_build gains this support:
# https://github.com/astral-sh/uv/issues/14037
[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/coodie/_version.py"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=5.1.0",
    "pytest-timeout>=2.0",
    "testcontainers>=4.0",
    "pre-commit>=4.5.1,<5",
]
docs = [
    "Sphinx>=9.1,<10; python_version >= '3.12'",
    "sphinx-rtd-theme>=3.1,<4; python_version >= '3.12'",
    "myst-parser>=5,<6; python_version >= '3.12'",
]

[tool.uv]
# scylla-driver and cassandra-driver both provide the `cassandra` Python
# namespace and cannot coexist in the same environment.
conflicts = [
    [
        { extra = "scylla" },
        { extra = "cassandra" },
    ],
]

[tool.ruff]
line-length = 120

[tool.semantic_release]
branch = "main"
build_command = "uv build"
tag_format = "v{version}"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=coodie --cov-report=term-missing:skip-covered -m 'not integration' --benchmark-disable"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
    "benchmark: marks tests as benchmark tests (enable with --benchmark-enable)",
    "ssl: marks tests that require an SSL-enabled ScyllaDB container",
]
python_files = ["test_*.py", "bench_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true
