[project]
name = "coodie-demo"
version = "0.1.0"
description = "FastAPI Product Catalog demo showcasing coodie's async API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
    "python-multipart>=0.0.22",
    "coodie",
]

[tool.uv.sources]
coodie = { path = "..", editable = true }
