[project]
name = "coodie-vector-search-demo"
version = "0.1.0"
description = "FastAPI vector search demo — Dimension-10: The Signal Graveyard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
    "python-multipart>=0.0.22",
    "coodie[scylla]",
    "click>=8.0",
    "rich>=13.0",
    "fastembed>=0.4",
]

[tool.uv.sources]
coodie = { path = "../..", editable = true }
